k8s-config/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    deployment: redis
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: redis
  template:
    metadata:
      labels:
        name: redis
        pod: redis
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - redis
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: redis
        image: redis:latest
        command:
          - redis-server
          - "/redis-master/redis.conf"        
        ports:
        - containerPort: 6379 
        resources:
          requests:
            cpu: "0.1"
            memory: "100Mi"
          limits:
            cpu: "0.5"
            memory: "500Mi" 
        volumeMounts:
        - mountPath: /redis-master-data
          name: data
        - mountPath: /redis-master
          name: config
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-config
            items:
              - key: redis-config
                path: redis.conf
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    pod: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
